--- a/project1/julie_notebook.ipynb
+++ b/project1/julie_notebook.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,18 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.4582534681605902, 0.44542305737893734, 0.43588355554648095, 0.4286484749489782, 0.4230741384107778, 0.4187104268316908, 26281577.23770128, 1.2021205327224033e+24]\n",
-      "[0.4578220879364682, 0.44500340682410455, 0.43549143559382275, 0.42829133506334865, 0.4227533006871641, 0.41842368471325353, 30769793.56046927, 2.0735249211400482e+24]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#least_squares_GD cross-validation\n",
     "initial_w = np.array([0.4 for i in range(tX_stdrzed.shape[1])]) \n",
@@ -138,23 +129,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.08\n",
-      "[ 0.21327586 -0.1146719  -0.07368819  0.04893754  0.02225969  0.12098264\n",
-      "  0.01944926  0.11727695  0.05210771 -0.26103589  0.1158705   0.12397883\n",
-      "  0.02394943  0.11838262  0.12186015  0.12181576 -0.00271883  0.121864\n",
-      "  0.12193441  0.04248975  0.12208034 -0.37029438  0.11649633 -0.0311746\n",
-      "  0.06456901  0.06459276 -0.08128091  0.024305    0.02420671 -0.13281751]\n",
-      "0.4187127661494721\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Weights for best gamma for least_squares_GD\n",
     "\n",
@@ -168,18 +145,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[116761.3309063721, 109335.36669083274, 506642.7473639225]\n",
-      "[0.9032772642408711, 1.0670254749322186, 46.23694402173714]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#logistic_regression cross-validation\n",
     "\n",
@@ -205,24 +173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1e-07\n",
-      "[  6.70968093 -35.37478552  -3.81622818  -0.19319657   2.63897026\n",
-      "   2.21089965   2.48368267   0.90021442  -1.06382924   2.97263477\n",
-      "  -0.65038781   1.45159447   2.70114369  18.05969885   0.24352419\n",
-      "   0.17975174  -4.73092368   0.23675558   0.34633217   0.58217815\n",
-      "   0.32184767  -3.89345914   0.13572754   3.97257752   4.31809735\n",
-      "   4.34578467   0.38030864   2.58058968   2.55730877  -9.82233767]\n",
-      "2847310.0023890096\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gamma = gammas[np.argmin(mse_te_logistic_regression)]\n",
     "weights, loss = logistic_regression(y_logistic, tX_stdrzed, initial_w, max_iters, gamma)\n",
@@ -236,20 +189,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{-1.0: 527481, 1.0: 40757}"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "unique, counts = np.unique(y_pred, return_counts=True)\n",
     "dict(zip(unique, counts))"
@@ -257,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,13 +238,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#least_squares_GD:\n",
     "\n",
-    "#max_iters = 1000 \n",
+    "#max_iters = 100 \n",
     "#k_fold = 5\n",
     "#seed = 42\n",
     "#initial_w = np.array([0.4 for i in range(tX_stdrzed.shape[1])]) \n",
@@ -327,7 +269,7 @@
    "source": [
     "#logistic_regression:\n",
     "\n",
-    "#max_iters = 100 \n",
+    "#max_iters = 1000 \n",
     "#k_fold = 5\n",
     "#seed = 42\n",
     "#initial_w = np.array([0.5 for i in range(tX_stdrzed.shape[1])])\n",
@@ -338,13 +280,130 @@
     "#   0.17975174  -4.73092368   0.23675558   0.34633217   0.58217815\n",
     "#   0.32184767  -3.89345914   0.13572754   3.97257752   4.31809735\n",
     "#   4.34578467   0.38030864   2.58058968   2.55730877  -9.82233767]\n",
-    "#loss : 2847310.0023890096\n",
+    "#loss : 2847310.0023890096 ???\n",
     "\n",
     "\n",
     "# On AICrowd :  \n",
     "# Categorical Accuracy : 0.696 \n",
     "# F1-Score : 0.267"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Least squares with cleaned colums\n",
+    "\n",
+    "tX_stdrzed_cleaned, mean, std = standardize(remove_wrong_columns(tX))\n",
+    "\n",
+    "max_iters = 200\n",
+    "k_fold = 5\n",
+    "seed = 42\n",
+    "initial_w = np.array([0.1 for i in range(tX_stdrzed_cleaned.shape[1])]) \n",
+    "gammas = np.array([0.01, 0.05, 0.09, 0.1, 0.2, 0.3])\n",
+    "\n",
+    "mse_tr_least_squares_GD_cleaned, mse_te_least_squares_GD_cleaned = \\\n",
+    "    cross_validation_gammas(least_squares_GD, y, tX_stdrzed_cleaned, initial_w, max_iters, gammas, k_fold, seed)\n",
+    "\n",
+    "print(mse_tr_least_squares_GD_cleaned)\n",
+    "print(mse_te_least_squares_GD_cleaned)\n",
+    "\n",
+    "gamma = gammas[np.argmin(mse_te_least_squares_GD_cleaned)]\n",
+    "weights, loss = least_squares_GD(y, tX_stdrzed_cleaned, initial_w, max_iters, gamma)\n",
+    "\n",
+    "print(gamma)\n",
+    "print(weights)\n",
+    "print(loss)\n",
+    "\n",
+    "tX_test_stdrzd_cleaned = (remove_wrong_columns(tX_test)-mean)/std #USE THE MEAN AND STD OF TRAINING DATA\n",
+    "\n",
+    "y_pred = predict_labels(weights, tX_test_stdrzd_cleaned)\n",
+    "\n",
+    "unique, counts = np.unique(y_pred, return_counts=True)\n",
+    "print(dict(zip(unique, counts)))\n",
+    "\n",
+    "OUTPUT_PATH = 'data/output.csv'\n",
+    "create_csv_submission(ids_test, y_pred, OUTPUT_PATH)\n",
+    "\n",
+    "#max_iters = 200 : It outputs 71.7% of accuracy\n",
+    "#with max_iters = 1000 : the loss was converging to 0.374 which was quite close to the loss with max_iters = 200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/julie/Documents/Repos/Machine-learning/project1/implementations.py:67: RuntimeWarning: divide by zero encountered in log\n",
+      "  + (1 - y).T @ np.log(1 - sigm_tx_w))\n",
+      "/Users/julie/Documents/Repos/Machine-learning/project1/implementations.py:134: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  if np.abs(loss - previous_loss) < threshold:\n",
+      "/Users/julie/Documents/Repos/Machine-learning/project1/implementations.py:67: RuntimeWarning: invalid value encountered in matmul\n",
+      "  + (1 - y).T @ np.log(1 - sigm_tx_w))\n",
+      "/Users/julie/Documents/Repos/Machine-learning/project1/implementations.py:66: RuntimeWarning: divide by zero encountered in log\n",
+      "  return - np.sum(y.T @ np.log(sigm_tx_w) \\\n",
+      "/Users/julie/Documents/Repos/Machine-learning/project1/implementations.py:66: RuntimeWarning: invalid value encountered in matmul\n",
+      "  return - np.sum(y.T @ np.log(sigm_tx_w) \\\n",
+      "/Users/julie/Documents/Repos/Machine-learning/project1/implementations.py:60: RuntimeWarning: overflow encountered in exp\n",
+      "  t_exp = np.exp(t)\n",
+      "/Users/julie/Documents/Repos/Machine-learning/project1/implementations.py:61: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  return t_exp /(1 + t_exp)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Logistic regression with cleaned colums\n",
+    "\n",
+    "tX_stdrzed_cleaned, mean, std = standardize(remove_wrong_columns(tX))\n",
+    "\n",
+    "y_logistic = []\n",
+    "for elem in y:\n",
+    "    if elem == -1:\n",
+    "        y_logistic.append(0)\n",
+    "    else:\n",
+    "        y_logistic.append(1)\n",
+    "y_logistic = np.asarray(y_logistic)\n",
+    "\n",
+    "max_iters = 1000\n",
+    "k_fold = 5\n",
+    "seed = 42\n",
+    "        \n",
+    "initial_w = np.array([0.5 for i in range(tX_stdrzed_cleaned.shape[1])])\n",
+    "gammas = np.array([0.00000001, 0.0000001, 0.000001, 0.00001, 0.0001, 0.001, 0.01, 0.1])\n",
+    "\n",
+    "mse_tr_logistic_cleaned, mse_te_logistic_cleaned = \\\n",
+    "    cross_validation_gammas(logistic_regression, y_logistic, tX_stdrzed_cleaned, initial_w, max_iters, gammas, k_fold, seed)\n",
+    "\n",
+    "print(mse_tr_logistic_cleaned)\n",
+    "print(mse_te_logistic_cleaned)\n",
+    "\n",
+    "gamma = gammas[np.argmin(mse_te_logistic_cleaned)]\n",
+    "weights, loss = logistic_regression(y_logistic, tX_stdrzed_cleaned, initial_w, max_iters, gamma)\n",
+    "\n",
+    "print(gamma)\n",
+    "print(weights)\n",
+    "print(loss)\n",
+    "\n",
+    "tX_test_stdrzd_cleaned = (remove_wrong_columns(tX_test)-mean)/std #USE THE MEAN AND STD OF TRAINING DATA\n",
+    "\n",
+    "y_pred = predict_labels(weights, tX_test_stdrzd_cleaned)\n",
+    "\n",
+    "unique, counts = np.unique(y_pred, return_counts=True)\n",
+    "print(dict(zip(unique, counts)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
