--- a/project1/report/proj1_report.tex
+++ b/project1/report/proj1_report.tex
@@ -1,6 +1,7 @@
 \documentclass[11pt, a4paper, twoside]{article}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
+\usepackage{listings}
  
 \begin{document}
 \date{2019 October}
