Logistic without wrong columns

--- a/project1/julie_notebook.ipynb
+++ b/project1/julie_notebook.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,27 +333,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/julie/Documents/Repos/Machine-learning/project1/implementations.py:67: RuntimeWarning: divide by zero encountered in log\n",
-      "  + (1 - y).T @ np.log(1 - sigm_tx_w))\n",
-      "/Users/julie/Documents/Repos/Machine-learning/project1/implementations.py:134: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  if np.abs(loss - previous_loss) < threshold:\n",
-      "/Users/julie/Documents/Repos/Machine-learning/project1/implementations.py:67: RuntimeWarning: invalid value encountered in matmul\n",
-      "  + (1 - y).T @ np.log(1 - sigm_tx_w))\n",
-      "/Users/julie/Documents/Repos/Machine-learning/project1/implementations.py:66: RuntimeWarning: divide by zero encountered in log\n",
-      "  return - np.sum(y.T @ np.log(sigm_tx_w) \\\n",
-      "/Users/julie/Documents/Repos/Machine-learning/project1/implementations.py:66: RuntimeWarning: invalid value encountered in matmul\n",
-      "  return - np.sum(y.T @ np.log(sigm_tx_w) \\\n",
-      "/Users/julie/Documents/Repos/Machine-learning/project1/implementations.py:60: RuntimeWarning: overflow encountered in exp\n",
-      "  t_exp = np.exp(t)\n",
-      "/Users/julie/Documents/Repos/Machine-learning/project1/implementations.py:61: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  return t_exp /(1 + t_exp)\n"
+      "[134549.02228442894, 110882.78761561534, 109703.54695909382]\n",
+      "[1.243960902609406, 0.961240634423851, 1.1365133229439568]\n",
+      "1e-07\n",
+      "[-2.06757902 -0.16980634  0.02618367  0.57029526 -0.28062279  0.54088995\n",
+      " -0.11921227  0.81310804  1.20396108  0.04662702  0.00449472  0.03766591\n",
+      "  0.04823453  0.09289131  0.30936817  0.05748957 -0.09179596  0.23740833\n",
+      " -0.57206259]\n",
+      "137064.31908522075\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'tX_test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-f9f333134354>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m \u001b[0mtX_test_stdrzd_cleaned\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mremove_wrong_columns\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mstd\u001b[0m \u001b[0;31m#USE THE MEAN AND STD OF TRAINING DATA\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpredict_labels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtX_test_stdrzd_cleaned\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tX_test' is not defined"
      ]
     }
    ],
@@ -375,7 +380,7 @@
     "seed = 42\n",
     "        \n",
     "initial_w = np.array([0.5 for i in range(tX_stdrzed_cleaned.shape[1])])\n",
-    "gammas = np.array([0.00000001, 0.0000001, 0.000001, 0.00001, 0.0001, 0.001, 0.01, 0.1])\n",
+    "gammas = np.array([0.00000001, 0.0000001, 0.000001])\n",
     "\n",
     "mse_tr_logistic_cleaned, mse_te_logistic_cleaned = \\\n",
     "    cross_validation_gammas(logistic_regression, y_logistic, tX_stdrzed_cleaned, initial_w, max_iters, gammas, k_fold, seed)\n",
@@ -395,7 +400,12 @@
     "y_pred = predict_labels(weights, tX_test_stdrzd_cleaned)\n",
     "\n",
     "unique, counts = np.unique(y_pred, return_counts=True)\n",
-    "print(dict(zip(unique, counts)))"
+    "print(dict(zip(unique, counts)))\n",
+    "\n",
+    "OUTPUT_PATH = 'data/output.csv'\n",
+    "create_csv_submission(ids_test, y_pred, OUTPUT_PATH)\n",
+    "\n",
+    "#It ouputs 72.4% on AIcrowd"
    ]
   },
   {
