--- a/project1/report/proj1_report.tex
+++ b/project1/report/proj1_report.tex
@@ -24,8 +24,7 @@
 This is not an abstract.
 \end{abstract}
 
-\section{introduction}
-This is not an introduction.
+\subfile{sections/introduction}
  
 \section{other section}
 This is not our report.
