Clean code for least_Squares_GD not cleaned

--- a/project1/julie_notebook.ipynb
+++ b/project1/julie_notebook.ipynb
@@ -389,11 +389,11 @@
     "print(mse_te_logistic_cleaned)\n",
     "\n",
     "gamma = gammas[np.argmin(mse_te_logistic_cleaned)]\n",
-    "weights, loss = logistic_regression(y_logistic, tX_stdrzed_cleaned, initial_w, max_iters, gamma)\n",
+    "weights, loss_sigmoid = logistic_regression(y_logistic, tX_stdrzed_cleaned, initial_w, max_iters, gamma)\n",
     "\n",
     "print(gamma)\n",
     "print(weights)\n",
-    "print(loss)\n",
+    "print(loss_sigmoid)\n",
     "\n",
     "tX_test_stdrzd_cleaned = (remove_wrong_columns(tX_test)-mean)/std #USE THE MEAN AND STD OF TRAINING DATA\n",
     "\n",
