Almost clean code, need to test

--- a/project1/julie_clean.ipynb
+++ b/project1/julie_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def map_label_01(y):\n",
+    "    y_logistic = []\n",
+    "    for elem in y:\n",
+    "        if elem == -1:\n",
+    "            y_logistic.append(0)\n",
+    "        else:\n",
+    "            y_logistic.append(1)\n",
+    "            \n",
+    "    return np.asarray(y_logistic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,8 +97,6 @@
     "        mse_tr.append(np.mean(tr_tmp))\n",
     "        mse_te.append(np.mean(te_tmp))\n",
     "        \n",
-    "        print(mse_te)\n",
-    "        \n",
     "    gamma = gammas[np.argmin(mse_te)]\n",
     "    weights_final, loss = least_squares_GD(y, tx, initial_w, max_iters, gamma)\n",
     "        \n",
@@ -90,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,13 +131,15 @@
     "            train_y = y[tr_indice]\n",
     "            \n",
     "            #Train the set and computes the losses\n",
-    "            weights, loss_tr = logistic_regressions(train_y, train_tx, initial_w, max_iters, gamma)\n",
-    "            loss_te = compute_loss_sigmoid(test_y, test_tx, weights)\n",
+    "            weights, loss_tr = logistic_regression(train_y, train_tx, initial_w, max_iters, gamma)\n",
+    "            loss_te = calculate_loss_sigmoid(test_y, test_tx, weights)\n",
     "            \n",
     "            tr_tmp.append(loss_tr)\n",
     "            te_tmp.append(loss_te)\n",
     "        loss_sigmoid_tr.append(np.mean(tr_tmp))\n",
     "        loss_sigmoid_te.append(np.mean(te_tmp))\n",
+    "        \n",
+    "        print(loss_sigmoid_te)\n",
     "        \n",
     "    gamma = gammas[np.argmin(loss_sigmoid_te)]\n",
     "    weights_final, loss_sigmoid = logistic_regression(y, tx, initial_w, max_iters, gamma)\n",
@@ -169,8 +186,177 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[37652.404918522974]\n",
+      "[37652.404918522974, 29027.774020060468]\n",
+      "[37652.404918522974, 29027.774020060468, 27764.098075652997]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#logistic_regression cross-validation\n",
+    "max_iters = 1000\n",
+    "k_fold = 5\n",
+    "seed = 42\n",
+    "\n",
+    "tX_stdrzed, mean, std = standardize(tX)\n",
+    "y_logistic = map_label_01(y)\n",
+    "        \n",
+    "initial_w = np.array([0.5 for i in range(tX_stdrzed.shape[1])])\n",
+    "gammas = np.array([0.00000001, 0.0000001, 0.0000005, 0.000001, 0.000005])\n",
+    "\n",
+    "losses_tr_logistic_regression, losses_te_logistic_regression, gamma, weights, loss = \\\n",
+    "    cross_validation_logistic_regression(y_logistic, tX_stdrzed, initial_w, max_iters, gammas, k_fold, seed)\n",
+    "\n",
+    "print(losses_tr_logistic_regression)\n",
+    "print(losses_te_logistic_regression)\n",
+    "print(gamma)\n",
+    "print(weights)\n",
+    "print(loss)\n",
+    "\n",
+    "tX_test_stdrzd = (tX_test-mean)/std\n",
+    "\n",
+    "y_pred = predict_labels(weights, tX_test_stdrzd)\n",
+    "OUTPUT_PATH = 'data/output_logistic_regression.csv'\n",
+    "create_csv_submission(ids_test, y_pred, OUTPUT_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#least_squares_GD cross-validation with cleaned data\n",
+    "max_iters = 200\n",
+    "k_fold = 5\n",
+    "seed = 42\n",
+    "\n",
+    "tX_stdrzed_cleaned, mean, std = standardize(remove_wrong_columns(tX))\n",
+    "\n",
+    "initial_w = np.array([0.1 for i in range(tX_stdrzed_cleaned.shape[1])]) \n",
+    "gammas = np.array([0.01, 0.05, 0.09, 0.1, 0.2, 0.3])\n",
+    "\n",
+    "mse_tr_least_squares_GD_clean, mse_te_least_squares_GD_clean, gamma, weights, loss = \\\n",
+    "    cross_validation_least_squares_GD(y, tX_stdrzed_cleaned, initial_w, max_iters, gammas, k_fold, seed)\n",
+    "\n",
+    "print(mse_tr_least_squares_GD_clean)\n",
+    "print(mse_te_least_squares_GD_clean)\n",
+    "print(gamma)\n",
+    "print(weights)\n",
+    "print(loss)\n",
+    "\n",
+    "tX_test_stdrzd_cleaned = (remove_wrong_colums(tX_test)-mean)/std\n",
+    "\n",
+    "y_pred = predict_labels(weights, tX_test_stdrzd_cleaned)\n",
+    "OUTPUT_PATH = 'data/output_least_squares_GD_clean.csv'\n",
+    "create_csv_submission(ids_test, y_pred, OUTPUT_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#logistic_regression cross-validation with cleaned data\n",
+    "max_iters = 1000\n",
+    "k_fold = 5\n",
+    "seed = 42\n",
+    "\n",
+    "tX_stdrzed_cleaned, mean, std = standardize(remove_wrong_columns(tX))\n",
+    "y_logistic = map_label_01(y)\n",
+    "        \n",
+    "initial_w = np.array([0.5 for i in range(tX_stdrzed_cleaned.shape[1])])\n",
+    "gammas = np.array([0.00000001, 0.0000001, 0.0000005, 0.000001, 0.00001, 0.0001])\n",
+    "\n",
+    "losses_tr_logistic_regression_clean, losses_te_logistic_regression_clean, gamma, weights, loss = \\\n",
+    "    cross_validation_logistic_regression(y_logistic, tX_stdrzed_cleaned, initial_w, max_iters, gammas, k_fold, seed)\n",
+    "\n",
+    "print(losses_tr_logistic_regression_clean)\n",
+    "print(losses_te_logistic_regression_clean)\n",
+    "print(gamma)\n",
+    "print(weights)\n",
+    "print(loss)\n",
+    "\n",
+    "tX_test_stdrzd_cleaned = (remove_wrong_columns(tX_test)-mean)/std\n",
+    "\n",
+    "y_pred = predict_labels(weights, tX_test_stdrzd_cleaned)\n",
+    "OUTPUT_PATH = 'data/output_logistic_regression_clean.csv'\n",
+    "create_csv_submission(ids_test, y_pred, OUTPUT_PATH)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Graphs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_plots_gammas(tr_losses, te_losses, gammas, save_name, title):\n",
+    "    plt.semilogx(gammas, tr_losses, marker=\".\", color='r', label='training error')\n",
+    "    plt.semilogx(gammas, te_losses, marker=\".\", color='b', label='test error')\n",
+    "    plt.xlabel(\"gamma\")\n",
+    "    plt.ylabel(\"error\")\n",
+    "    plt.title(title)\n",
+    "    plt.legend(loc=2)\n",
+    "    plt.grid(True)\n",
+    "    plt.savefig(save_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Least squares\n",
+    "make_plots_gammas(mse_tr_least_squares_GD, mse_te_least_squares_GD, gammas_lsgd, \\\n",
+    "                  \"raw_data_least_squares_GD\", \"Least squares gradient descent raw data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Logistic regression\n",
+    "make_plots_gammas(losses_tr_logistic_regression, losses_te_logistic_regression, gammas_logistic, \\\n",
+    "                  \"raw_data_logistic_regression\", \"Logistic regression raw data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Least squares with cleaned data\n",
+    "make_plots_gammas(mse_tr_least_squares_GD_clean, mse_te_least_squares_GD_clean, gammas_lsgd_clean, \\\n",
+    "                  \"raw_data_least_squares_GD_clean\", \"Least squares gradient descent cleaned data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Logistic regression with cleaned data\n",
+    "make_plots_gammas(losses_tr_logistic_regression_clean, losses_te_logistic_regression_clean, gammas_logistic_clean, \\\n",
+    "                  \"raw_data_logistic_regression_clean\", \"Logistic regression cleaned data\")"
+   ]
   }
  ],
  "metadata": {
