--- a/project1/julie_clean.ipynb
+++ b/project1/julie_clean.ipynb
@@ -288,9 +288,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[111678.06536196393, 109758.83983624443, 109643.06184535341, 140559.28508343527, nan]\n",
+      "[27906.683393496816, 27441.74829483843, 27413.690731399663, 35880.7294526985, 71472.36490845383]\n",
+      "1e-06\n",
+      "[-2.31196327 -0.59237483 -0.44694055  6.10493865 -0.43909415  1.67756199\n",
+      " -2.98344103  6.59886164  0.85397422 -1.18905296 -1.51871208 -0.23871944\n",
+      " -1.21183561 -0.75822296  0.83659883 -1.04485771 -0.08032564 -0.18630034\n",
+      " -1.70169468]\n",
+      "136472.75361651962\n"
+     ]
+    }
+   ],
    "source": [
     "#logistic_regression cross-validation with cleaned data\n",
     "max_iters = 1000\n",
@@ -317,7 +332,9 @@
     "\n",
     "y_pred = predict_labels(weights, tX_test_stdrzd_cleaned)\n",
     "OUTPUT_PATH = 'data/output_logistic_regression_clean.csv'\n",
-    "create_csv_submission(ids_test, y_pred, OUTPUT_PATH)"
+    "create_csv_submission(ids_test, y_pred, OUTPUT_PATH)\n",
+    "\n",
+    "#0.727 on AICrowd"
    ]
   },
   {
