implement ridge regression pipeline in danielementary.ipynb

--- a/project1/danielementary.ipynb
+++ b/project1/danielementary.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Useful starting lines\n",
@@ -25,20 +23,385 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from proj1_helpers import *\n",
-    "DATA_TRAIN_PATH = '' # TODO: download train data and supply path here \n",
+    "from implementations import *\n",
+    "\n",
+    "DATA_TRAIN_PATH = 'data/train.csv'\n",
     "y, tX, ids = load_csv_data(DATA_TRAIN_PATH)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Do your thing crazy machine learning thing here :) ..."
+    "tX_stdzed, tX_mean, tX_std = standardize(tX)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_poly(x, degree):\n",
+    "    \"\"\"polynomial basis functions for input data x, for j=0 up to j=degree.\"\"\"\n",
+    "    return np.vander(x, degree+1, True)\n",
+    "\n",
+    "def ridge_cross_validation(y, x, k_indices, k, lambda_, degree):\n",
+    "    train_y, train_x, test_y, test_x = np.array([]), np.array([]), np.array([]), np.array([])\n",
+    "    \n",
+    "    for k_ in range(len(k_indices)):\n",
+    "        temp_y = y.take(k_indices[k_])\n",
+    "        temp_x = x.take(k_indices[k_])\n",
+    "        \n",
+    "        if k_ != k:\n",
+    "            train_y = np.concatenate((train_y, temp_y))\n",
+    "            train_x = np.concatenate((train_x, temp_x))\n",
+    "        else:\n",
+    "            test_y = np.concatenate((test_y, temp_y))\n",
+    "            test_x = np.concatenate((test_x, temp_x))\n",
+    "    \n",
+    "    train_poly = build_poly(train_x, degree)\n",
+    "    test_poly = build_poly(test_x, degree)\n",
+    "    \n",
+    "    w, loss_tr = ridge_regression(train_y, train_poly, lambda_)\n",
+    "    loss_te = compute_loss(mse, test_y, test_poly, w)\n",
+    "    \n",
+    "    return loss_tr, loss_te"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "def cross_validation_visualization(lambds, mse_tr, mse_te):\n",
+    "    \"\"\"visualization the curves of mse_tr and mse_te.\"\"\"\n",
+    "    plt.semilogx(lambds, mse_tr, marker=\".\", color='b', label='train error')\n",
+    "    plt.semilogx(lambds, mse_te, marker=\".\", color='r', label='test error')\n",
+    "    plt.xlabel(\"lambda\")\n",
+    "    plt.ylabel(\"rmse\")\n",
+    "    plt.title(\"cross validation\")\n",
+    "    plt.legend(loc=2)\n",
+    "    plt.grid(True)\n",
+    "    plt.savefig(\"cross_validation\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_k_indices(y, k_fold, seed):\n",
+    "    \"\"\"build k indices for k-fold.\"\"\"\n",
+    "    num_row = y.shape[0]\n",
+    "    interval = int(num_row / k_fold)\n",
+    "    np.random.seed(seed)\n",
+    "    indices = np.random.permutation(num_row)\n",
+    "    k_indices = [indices[k * interval: (k + 1) * interval]\n",
+    "                 for k in range(k_fold)]\n",
+    "    return np.array(k_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cross_validation_demo(l_min, l_max, degree):\n",
+    "    seed = 1\n",
+    "    k_fold = 5\n",
+    "    lambdas = np.logspace(-l_min, -l_max, 50)\n",
+    "    k_indices = build_k_indices(y, k_fold, seed)\n",
+    "    rmse_tr = []\n",
+    "    rmse_te = []\n",
+    "    \n",
+    "    te_min = (np.NaN, np.Inf)\n",
+    "    \n",
+    "    for l in lambdas:\n",
+    "        tr_avg = 0\n",
+    "        te_avg = 0\n",
+    "        \n",
+    "        for k_ in range(k_fold):\n",
+    "            loss_tr, loss_te = ridge_cross_validation(y, tX_stdzed, k_indices, k_, l, degree)\n",
+    "            \n",
+    "            tr_avg += loss_tr\n",
+    "            te_avg += loss_te\n",
+    "            \n",
+    "        rmse_tr.append(tr_avg/k_fold)\n",
+    "        \n",
+    "        temp_rmse_te = te_avg/k_fold\n",
+    "        rmse_te.append(temp_rmse_te)\n",
+    "        \n",
+    "        if temp_rmse_te < te_min[1]:\n",
+    "            te_min = (l, temp_rmse_te)\n",
+    "            \n",
+    "    cross_validation_visualization(lambdas, rmse_tr, rmse_te)\n",
+    "    print(te_min)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(30, 0, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(6, 4, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(30, 0, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(6, 4, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(30, 0, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(17, 15, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(10, 0, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(10, 9, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(10, 0, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(10, 0, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(5, 3, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(10, 0, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(5, 3, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(10, 0, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(3, 2, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(10, 0, 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(3, 1, 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(10, 0, 12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(3, 1, 12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(10, 0, 15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(1, 0, 15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(10, 0, 16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(10, 0, 17)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(10, 0, 18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(4.5, 4, 18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(4, 2, 18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(10, 0, 21)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_validation_demo(10, 0, 25)"
    ]
   },
   {
@@ -50,33 +413,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_TEST_PATH = '' # TODO: download train data and supply path here \n",
+    "DATA_TRAIN_PATH = 'data/train.csv'\n",
+    "y, tX, ids = load_csv_data(DATA_TRAIN_PATH)\n",
+    "\n",
+    "DATA_TEST_PATH = 'data/test.csv'\n",
     "_, tX_test, ids_test = load_csv_data(DATA_TEST_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "OUTPUT_PATH = '' # TODO: fill in desired name of output file for submission\n",
-    "y_pred = predict_labels(weights, tX_test)\n",
-    "create_csv_submission(ids_test, y_pred, OUTPUT_PATH)"
+    "tX_stdzed, tX_mean, tX_std = standardize(tX)\n",
+    "tX_test_stdzed = (tX_test-tX_mean)/tX_std\n",
+    "\n",
+    "lambda_ = 0.00026826957952797245\n",
+    "degree  = 5\n",
+    "\n",
+    "poly_tX_stdzed = expand_features_polynomial(tX_stdzed, degree)\n",
+    "poly_tX_test_stdzed = expand_features_polynomial(tX_test_stdzed, degree)\n",
+    "\n",
+    "w, _ = ridge_regression(y, poly_tX_stdzed, lambda_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "OUTPUT_PATH = 'data/danielementary_ridge.csv'\n",
+    "y_pred = predict_labels(w, poly_tX_test_stdzed)\n",
+    "create_csv_submission(ids_test, y_pred, OUTPUT_PATH)"
+   ]
   }
  ],
  "metadata": {
